--- a/client/src/components/ImageButton/ImageButton.css
+++ b/client/src/components/ImageButton/ImageButton.css
@@ -2,6 +2,18 @@
     width: 50px;
   }
   
+  @import url('https://fonts.googleapis.com/css2?family=Rubik+Doodle+Shadow&display=swap');
+  .image-container-title{
+    font-size: 40px;
+    font-family: "Rubik Doodle Shadow", serif;
+    margin: 20px;
+    align-items: center;
+    text-align: center;  
+    font-weight: bold; /* 글자를 굵게 표시 */
+    color: black; 
+    border-radius: 10px; /* 더 굵고 둥근 스타일을 위해 border-radius 적용 */
+  }
+  
   .button-divider {
     width: 100%; /* 가로선이 컨테이너 전체 너비를 가지도록 설정 */
     margin: 10px 0; /* 위아래 간격 조절 */
@@ -18,6 +30,7 @@
   .container {
     margin: 30px;
     display: flex;
+    box-shadow: 0 0 0 2px #333;
   }
 
   .button-container {
@@ -34,18 +47,17 @@
     margin: 200px;
     align-items: center;
     justify-content: center;
+    
   }
   
   .button-container:hover {
-    background-color: #fff0f0; /* 버튼 위에 호버됐을 때의 배경색을 설정합니다. */
+    background: linear-gradient(to bottom, #F9BD9D, #FDE3D5); /* 버튼 위에 호버됐을 때의 배경색을 설정합니다. */
   }
-  
   
   .button-gap {
     width: 25px;
   }
 
-  
   .image-container {
     position: relative;
     font-weight: bold; 
@@ -54,14 +66,14 @@
   }
   
   .image-name {
-    position: absolute;
-    bottom: 0;
-    left: 50%;
-    transform: translateX(-50%);
-    background-color: #ccc;
-    padding: 5px;
+    position: relative;
+    background-color:  rgba(255, 0, 0, 0.0);
     font-family: 'Arial', sans-serif; /* 글씨체 설정 (원하는 글꼴로 변경 가능) */
     font-weight: bold; /* 굵은 글씨체 적용 */
     border-radius: 10px; /* 둥근 테두리 적용 */
-    font-size: 20px;
+    font-size: 22px;
+  }
+
+  .image {
+    margin-bottom: 30px;
   }
