--- a/client/src/components/Logo/Logo.css
+++ b/client/src/components/Logo/Logo.css
@@ -5,18 +5,18 @@
     top: 10px; /* 화면 위쪽에 고정 */
     left: 10px; /* 화면 왼쪽에 고정 */
     padding: 20px;
-    background: rgba(255, 0, 0, 0.0); /* 빨간색 그라데이션 */
 }
 
 .Logo-button {
-    background-color: rgba(255, 0, 0, 0.0); /* 빨간색, 투명도 50% */
-    color: black; /* 글자색을 흰색으로 지정 */
+    background-color: rgba(255, 0, 0, 0.0); /* 빨간색, 투명도 100% */
+    
     padding: 10px 20px; /* 내용물 주위에 여백을 추가 */
-    border: none; /* 테두리 없애기 */
+    border: 2px solid #333;/* 테두리 없애기 */
     cursor: pointer; /* 포인터로 인터랙션 효과 주기 */
     font-weight: bold; /* 글자를 굵게 표시 */
+    color: black; 
     border-radius: 10px; /* 더 굵고 둥근 스타일을 위해 border-radius 적용 */
     font-size: 30px;
     font-family: "Rubik Doodle Shadow", serif;
-    // #
+
 }
